public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
  margin:0; 
  padding: 0;
  color: var(--primary-text);
  font-size: 14px; 
}
/***********Global Variables*********/
:root{
  --primary-background: #0B1F3A; 
  --accent-background: #B00000;
  --transparent-accent-background: #c0c0c0dd; 
  --secondary-accent: #C0C0C0; 
  --primary-text: #ffffff; 
  --muted-text: #D1D5DB; 
  --dark-text: #111827;
  --large: 15px; 
  --small: 6px; 
}

/***************background**************/
html {
  background-color: #fff;
  background: 
    linear-gradient(45deg, #000 25%, transparent 25%) 0 0,
    linear-gradient(45deg, transparent 75%, #000 75%) 0 0,
    linear-gradient(45deg, transparent 75%, #000 75%) 75px 75px,
    linear-gradient(45deg, #000 25%, transparent 25%) 75px 75px; 
  background-size: 150px 150px;
}

body {
  justify-self: center; 
  width: 80%; 
  border: 1px solid var(--accent-background); 
  background-color: var(--primary-background);
  margin-top: 5%; 
}
/*****************header******************/

header{
  display: grid; 
  grid-template-columns: 70% 30%;
  background-color: var(--secondary-accent);
}

header a{
  display: block; 
  color: var(--dark-text); 
  text-decoration: none;
  padding: var(--large) var(--small);
}

.siteName a{
  font-weight: bold;
  font-size: 28px;
}

#tools a{
  display: block; 
  height: 100%;
  font-size: 15px;
  align-content: center;
}

/*****************navigation***************/
nav{
  background-color: var(--accent-background);
}

nav ul {
  display: flex; 
  justify-content: space-around;
}

nav ul li{
  list-style: none;
  padding: var(--small); 
  color: var(--primary-text);
}
/*******************index*******************/
.hero{
  display: flex;
  position: relative; 
  width: 80%;
  justify-self: center;
  justify-content: center;
  align-items: center; 
  height: 270px; 
}


.features{
  display: none;
  flex-direction: column;
  position: absolute; 
  top: 0;
  left: -20px;
  background-color: var(--transparent-accent-background);
  justify-content: center;
  padding: var(--small)
}

.features.show{
  display: flex; 
}

.features button{
  background-color: var(--accent-background);
  color: var(--primary-text); 
  border: 2px solid var(--muted-text); 
  border-radius: var(--small);
  padding: var(--small); 
}

.features p{
  color: var(--dark-text);
  font-size: 15px;
  margin: 2px; 
}


h1{
  padding: var(--small);
  font-size: 21px;
}
h2{
  color: var(--dark-text);
  padding: var(--small); 
  font-size: 18px; 
}

h3, h3 span{
font-size: 18px;
}

/****************infoWrapper*****************/
.infoWrapper{
  display: flex; 
  flex-direction: column-reverse;
}
.upgrades{
  display: grid; 
  grid-template-columns: 1fr 1fr;
  background-color: var(--accent-background);
}


.upgrades h3{
  grid-area: 1/1/2/3
}

.upgrades figure{
  padding: var(--large) var(--small); 
  margin: 0 auto; 
  text-align: center;
}
.upgrades figure img{
  background-color: var(--secondary-accent);
  height: 50px; 
  width: auto; 
  justify-self: center;
}

.reviews ul{
  list-style: none; 
}

.reviews li{
  position: relative; 
  padding: var(--small);
  padding-left: 1.3em;  
  color: var(--dark-text); 
}
.reviews li::before{
  color: var(--dark-text); 
  content:"•";
  position: absolute; 
  left: 3px;
}

.reviews h3, .reviews h3 span{
  color: var(--dark-text); 
}

.upgrades h3{
color: var(--primary-text); 
}

.reviews {
  background-color: var(--secondary-accent);
}

footer p{
  padding: var(--small);
}


/*********************large screens************************/

@media screen and (min-width: 550px) {
  
  *{
    font-size: 18px;
  }

  .hero{
    height: 459px; 
  }

  .infoWrapper{
    display: grid; 
    grid-template-columns: 1fr 1fr; 
  }

  .siteName a{
    font-size: 35px ;
  }
  
  #tools a, .features p{
    font-size: 20px;
  }

  h1{
    font-size: 26px;
  }

  h2, h3, h3 span{
    font-size: 23px;
  }


}

